kubernetes/apps/keyb/dev/backend/deploymentPatch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyb-backend
  namespace: keyb
spec:
  selector:
    matchLabels:
      app: keyb-backend-dev
  template:
    metadata:
      labels:
        app: keyb-backend-dev
    spec:
      containers:
      - name: keyb-backend
        image: ghcr.io/keybio/backend/backend:develop
        ports:
        - name: http
          containerPort: 4000
