kubernetes/apps/keyb/dev/backend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: keyb-backend-service
spec:
  selector:
    app: keyb-backend-dev
  type: ClusterIP
  ports:
    - name: http
      port: 4000
      targetPort: 4000
